# chromacode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  binding.gyp  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
examples/: decode.ts  encode.ts
lib/: native.ts
native/: CMakeLists.txt  Makefile
native/include/: chromacode.h
native/napi/: addon.c
native/src/: auto_size.c  capacity.c  channels.c  crc32.c  decode.c  encode.c  gf256.c  grid.c  interleave.c  png.c  reed_solomon.c
native/test/: test_chromacode.c
src/: auto-size.ts  capacity.ts  channels.ts  crc32.ts  decode.ts  encode.ts  gf256.ts  grid.ts  index.ts  interleave.ts  png.ts  reed-solomon.ts  types.ts
tests/: boundary.test.ts  capacity.test.ts  channels.test.ts  compression.test.ts  crc32.test.ts  decode-errors.test.ts  determinism.test.ts  edge-cases.test.ts  error-correction.test.ts  gf256.test.ts  grid.test.ts  header-conformance.test.ts  interleave.test.ts  invalid-inputs.test.ts  native.test.ts  png.test.ts  reed-solomon.test.ts  round-trip.test.ts  sequence.test.ts
